# metin2

./: .bacon-locations  .gitignore  Cargo.toml  gltf_to_glb.sh
assets/Dungeon/glb/: banner_blue.glb  banner_brown.glb  banner_green.glb  banner_patternA_blue.glb  banner_patternA_brown.glb  banner_patternA_green.glb  banner_patternA_red.glb  banner_patternA_white.glb  banner_patternA_yellow.glb  banner_patternB_blue.glb  banner_patternB_brown.glb  banner_patternB_green.glb  banner_patternB_red.glb  banner_patternB_white.glb  banner_patternB_yellow.glb  banner_patternC_blue.glb  banner_patternC_brown.glb  banner_patternC_green.glb  banner_patternC_red.glb  banner_patternC_white.glb  banner_patternC_yellow.glb  banner_red.glb  banner_shield_blue.glb  banner_shield_brown.glb  banner_shield_green.glb  banner_shield_red.glb  banner_shield_white.glb  banner_shield_yellow.glb  banner_thin_blue.glb  banner_thin_brown.glb  banner_thin_green.glb  banner_thin_red.glb  banner_thin_white.glb  banner_thin_yellow.glb  banner_triple_blue.glb  banner_triple_brown.glb  banner_triple_green.glb  banner_triple_red.glb  banner_triple_white.glb  banner_triple_yellow.glb  (+171 more)
assets/MedievalVillage/glb/: Prop_MetalFence_Ornament.glb  Prop_MetalFence_Simple.glb  Prop_Vine1.glb  Prop_Vine2.glb  Prop_Vine4.glb  Prop_Vine5.glb  Prop_Vine6.glb  Prop_Vine9.glb
assets/models/terrain/: Mountains.glb
src/: lib.rs
