[package]
name = "metin2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "metin2server"
path = "src/bin/server.rs"

[[bin]]
name = "metin2client"
path = "src/bin/client.rs"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.36.0"
bevy_renet = "2.0.0"
bytes = "1.10.1"
egui = "0.32.1"
fastrand = "2.3.0"
postcard = { version = "1.1.3", features = ["alloc"]}
renet = "1.1.0"
serde = "1.0.219"
